- Version 3.0.0 of jchart2d from former CVS.